--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
